🚲🫖 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Unit 5 Project
 Requirements
-[  ] <div> and <span>
+[ x ] <div> and <span>
 [  ] height: and width:
 [  ] margin: and padding: 
 [  ] Three Images
@@ -16,17 +16,42 @@ Select ONE Additional Feature to Add
 
 <!DOCTYPE html>
 <html>
-
-<head>
-  <title>Unit 5 Project</title>
-  <meta charset="utf-8">
-  <style>
-
-  </style>
-</head>
-<body>
-
- 
-
-</body>
+  <head>
+    <title>Unit 5 Project</title>
+    <meta charset="utf-8" />
+    <style>
+      .labrobro {
+        color: green;
+      }
+      #pop {
+        background: rgb(120, 120, 140);
+        background-image: radial-gradient(Blue, white, Green);
+        
+        width: 50%;
+        height: 200px;
+        overflow-y: auto;
+        overflow-x: hidden;
+        margin: 15px;
+        padding: 100px;
+      }
+    </style>
+  </head>
+  <body>        
+    <div id="pop">
+      <h1>
+        Bruh <span class="labrobro"> LOL </span> LOW TAPER FADE
+        <p>lollllllllllll I got lazy lol</p>
+        <img src = "https://cdn.nba.com/headshots/nba/latest/1040x760/2544.png" width = "100">
+        <img src = "https://encrypted-tbn0.gstatic.com/licensed-image?q=tbn:ANd9GcQNwjho7fAE49HJzIHWQW07a6wKslyNs-S5oNRi8TIyUcH16HOX19GUgqiO3ZHKxEAWbDOPCbHe0vWyOVY" width = "100">
+             <img src = "https://ih1.redbubble.net/image.5498349460.8099/st,small,507x507-pad,600x600,f8f8f8.jpg" width = "100">
+        <div>
+          <h1>
+            <body>
+              <html></html>
+            </body>
+          </h1>
+        </div>
+      </h1>
+    </div>
+  </body>
 </html>
